crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@call_read_tier_yield_named.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- first :: Resolved(String)
- second :: Resolved(Integer)
rows:
- ["alpha", 10]
- ["beta", 20]
delta: nodes=+0 edges=+0 schema_changed=false
