crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@mutation_insert_node_return.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- n :: Resolved(NodeRef)
rows:
- [#node_0]
delta: nodes=+1 edges=+0 schema_changed=false
