crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@mutation_match_set_return.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- score :: Dynamic
rows:
- [42]
delta: nodes=+0 edges=+0 schema_changed=false
