crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@read_expand_hash_join.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- a :: Resolved(NodeRef)
- b :: Resolved(NodeRef)
rows:
- [#node_0, #node_1]
- [#node_1, #node_2]
delta: nodes=+0 edges=+0 schema_changed=false
