crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@read_group_by_aggregate.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- tenant :: Dynamic
- c :: Dynamic
- s :: Dynamic
rows:
- ["t1", 2, 4]
- ["t2", 2, 6]
delta: nodes=+0 edges=+0 schema_changed=false
